# event-vtr

./: LICENSE  README.md  pixi.toml
cam_ws/src/cam_pub/: CMakeLists.txt  package.xml
cam_ws/src/cam_pub/config/: default.json  log.cfg  settings.json
cam_ws/src/cam_pub/include/: evk4.h  utils.h  xcorr.h
cam_ws/src/cam_pub/src/: davis.cpp  evk4.cpp  torch_corr.cpp  xcorr.cpp
cam_ws/src/event-teach-repeat/: CMakeLists.txt
cam_ws/src/event-teach-repeat/launch/: data_collection_scout.launch  data_collection_scout_rgb.launch  data_matching_scout.launch  goto_goal.launch
cam_ws/src/event-teach-repeat/nodes/: data_collect_rgb.py  data_save.py  drive_straight_controller.py  drive_straight_controller_rgb.py  image_matcher.py  localiser.py  localiser_old.py
cam_ws/src/event-teach-repeat/src/teach_repeat/: image_processing.py  read_prophesee.py
