<?xml version="1.0"?>
<package format="2">
  <name>cam_pub</name>
  <version>0.0.1</version>
  <description>ROS1 node that publishes event frames from DAVIS camera at 100 FPS.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime + build dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>roslib</depend>
  <build_depend>message_generation</build_depend>
  
  <!-- System dependencies (OpenCV + libcaer) -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>libcaer-dev</exec_depend>

  <export>
  </export>
</package>